[gd_scene load_steps=3 format=2]

[ext_resource path="res://plugins/dock.gd" type="Script" id=1]
[ext_resource path="res://plugins/icon.png" type="Texture" id=2]



[node name="BoneGizmo" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 64.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="VBox" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 40.0
margin_right = 174.0
margin_bottom = 230.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 10
alignment = 0
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="FindGizmo" type="Button" parent="VBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 154.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Find Gizmo"
flat = false
align = 1

[node name="ResetGizmo" type="Button" parent="VBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 30.0
margin_right = 154.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Reset Gizmo Matrix"
flat = false
align = 1

[node name="RunGizmo" type="CheckButton" parent="VBox" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 60.0
margin_right = 154.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Run Gizmo"
flat = false
align = 0

[node name="SkeletonPath" type="LineEdit" parent="VBox" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 110.0
margin_right = 154.0
margin_bottom = 134.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_text = "Skeleton Path"
placeholder_alpha = 0.3
caret_blink = true
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Placeholder" ]

[node name="Bone" type="LineEdit" parent="VBox" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 144.0
margin_right = 154.0
margin_bottom = 168.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_text = "Skeleton Bone"
placeholder_alpha = 0.3
caret_blink = true
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Placeholder" ]

[node name="AnimationPath" type="LineEdit" parent="VBox" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 178.0
margin_right = 154.0
margin_bottom = 202.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_text = "AnimPlayer Path"
placeholder_alpha = 0.3
caret_blink = true
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Placeholder" ]

[node name="CreateTracks" type="Button" parent="VBox" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 212.0
margin_right = 154.0
margin_bottom = 232.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Create Tracks"
flat = false
align = 1

[node name="InsertKey" type="Button" parent="VBox" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 242.0
margin_right = 154.0
margin_bottom = 262.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Insert Key"
flat = false
align = 1

[node name="Info" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 23.0
margin_top = 3.0
margin_right = 148.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "@thimenesup V 0.1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Icon" type="TextureRect" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 158.0
margin_top = 8.0
margin_right = 174.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="Output" type="RichTextLabel" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 6.0
margin_top = 500.0
margin_right = 211.0
margin_bottom = 703.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = true
bbcode_text = "Output"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Output"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Rect" ]

[connection signal="pressed" from="VBox/FindGizmo" to="." method="_on_FindGizmo_pressed"]

[connection signal="pressed" from="VBox/ResetGizmo" to="." method="_on_ResetGizmo_pressed"]

[connection signal="toggled" from="VBox/RunGizmo" to="." method="_on_RunGizmo_toggled"]

[connection signal="text_entered" from="VBox/SkeletonPath" to="." method="_on_SkeletonPath_text_entered"]

[connection signal="text_entered" from="VBox/Bone" to="." method="_on_Bone_text_entered"]

[connection signal="text_entered" from="VBox/AnimationPath" to="." method="_on_AnimationPath_text_entered"]

[connection signal="pressed" from="VBox/CreateTracks" to="." method="_on_CreateTracks_pressed"]

[connection signal="pressed" from="VBox/InsertKey" to="." method="_on_InsertKey_pressed"]


